# FiniteStateEntropy

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
lib/: encryptor.c  encryptor.h  encryptor_ctx.h  entropy_common.c  file_encryptor.c  file_encryptor.h  fse.h  fseU16.c  fse_compress.c  fse_decompress.c  huf_compress.c
programs/: aes_test.c  bench.c  encryptionBenchmark.cpp  fullbench.c  workspace.c
tests/: CMakeLists.txt  aes_test.cpp  encryption_test.cpp  file_encryption_test.cpp  helper_test.cpp  helpers.cpp  helpers.h
